Question 2 : here is the whole data of the courses dataset

--- a/FERRE.qmd
+++ b/FERRE.qmd
@@ -25,5 +25,14 @@ courses <- vroom(here("data", "courses.csv"))
 View(courses)
 
 ```
+### Question 2 :
+
+```{r}
+courses |>
+  arrange(course) |>
+  gt::gt() |>
+  tab_header(title = "Course Data")
+
+```
 
 
