Correction of a typo in question 2 (at least what I consider as a typo - a 's' forgotten)

--- a/FERRE.qmd
+++ b/FERRE.qmd
@@ -31,7 +31,7 @@ View(courses)
 courses |>
   arrange(course) |>
   gt::gt() |>
-  tab_header(title = "Course Data")
+  tab_header(title = "Courses Data")
 
 ```
 
