--- a/FERRE.qmd
+++ b/FERRE.qmd
@@ -73,11 +73,27 @@ grades <- vroom(here("data", "grades.csv"))
 View(grades)
 
 ```
-Problème : le délimitateur est un '.' au lieu de ',' ; et les missing values ne sont pas encodées en NA. Changeons cela :
+Problème d'encodage, changeons cela :
 
 ```{r}
 
-grades <- read_delim("grades.csv", delim = ":", na = "unknown")
+grades <- vroom(here("data", "grades.csv"), delim = ":", na = "unknown")
+View(grades)
+
+```
+#### Question 5
+
+```{r}
+
+students |>
+  ggplot(aes(x = factor(group))) +
+  geom_bar(fill = "steelblue") +
+  labs(title = "Number of Students per Group", x = "Group", y = "Nb of Students") +
+  geom_text(stat = 'count', aes(label = after_stat(count)), vjust = -0.5) +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_x_discrete(breaks = c("1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18"))
 
 ```
 
+#### Question 6
