--- a/FERRE.qmd
+++ b/FERRE.qmd
@@ -14,6 +14,8 @@ library(ggplot2)
 library(vroom)
 library(gt)
 library(readr)
+install.packages("lubridate")
+library(lubridate)
 
 ```
 
@@ -108,5 +110,19 @@ students |>
   theme_bw() +
   theme(plot.title = element_text(hjust = 0.5))
 
+```
+#### Question 7 
+
+```{r}
+students <- students |>
+  mutate(Age = round(time_length(today() - birth_date, unit = "year")))
+
+students |>
+  ggplot(aes(x = Age)) +
+  geom_histogram(aes(y = after_stat(density)), binwidth = 1, fill = "lightblue", color = "white") +
+  geom_density(bw = "sj", linewidth = 1, color = "darkblue") +
+  labs(title = "Distribution of Students' Age", x = "Age",y = "Density") +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5))
 ```
 
